--- a/src/com/mypos/product/view/ProductPanel.form
+++ b/src/com/mypos/product/view/ProductPanel.form
@@ -258,10 +258,11 @@
           <Color blue="ff" green="66" red="66" type="rgb"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Stock &lt; 10"/>
-            <StringItem index="1" value="Stock &lt; 25"/>
-            <StringItem index="2" value="Stock &lt; 50"/>
+          <StringArray count="4">
+            <StringItem index="0" value="All Stock"/>
+            <StringItem index="1" value="Stock &lt; 10"/>
+            <StringItem index="2" value="Stock &lt; 25"/>
+            <StringItem index="3" value="Stock &lt; 50"/>
           </StringArray>
         </Property>
       </Properties>
@@ -284,6 +285,9 @@
           <Color blue="0" green="66" red="0" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Edit"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Hand Cursor"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EditProductActionPerformed"/>
@@ -301,6 +305,9 @@
           <Color blue="0" green="0" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Delete"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Hand Cursor"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DeleteProductActionPerformed"/>
